# criterion-bug

./: Cargo.toml
benches/: test_criterion.rs
